modified:   css/meu_estilo.css 	new file:   hello_word.php

--- a/css/meu_estilo.css
+++ b/css/meu_estilo.css
@@ -5,7 +5,7 @@
     /*background-image: url("../imagens/bg_fogo.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;*/
-    background: url(../imagens/bg_fogo.jpg) no-repeat fixed;
+   /* background: url(../imagens/bg_fogo.jpg) no-repeat fixed;*/
     background-size: cover;
     -webkit-background-size: cover;
 
